--- a/src/App.scss
+++ b/src/App.scss
@@ -2,8 +2,30 @@ body {
 	background: #333;
 	color: #ccc;
 	padding: 0 20px;
-
 	h1 {
 		color: rgb(226, 226, 151);
+	}
+
+	.buttons {
+		margin-bottom: 10px;
+		button {
+			font-size: 1.5rem;
+			width: 100px;
+			margin-right: 5px;
+		}
+	}
+
+	.nouns {
+		display: grid;
+		grid-template-columns: repeat(5,1fr);
+		grid-template-rows: auto;
+		grid-column-gap: 2px;
+		grid-row-gap: 2px;
+
+		.noun {
+			background-color: #444;
+			padding: 5px;
+			text-align: center;
+		}
 	}
 }
